--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello everyone
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>my first web page</title>
+</head>
+<body>
+    <h1>frontend web development</h1>
+    <section></section>
+    <h2>html</h2>
+    <section></section>
+    <section></section>
+    <h1>css</h1>
+    <h1>react</h1>
+</body>
+</html>
