--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>frontend web development</h1>
-    <section></section>
-    <h2>html</h2>
-    <section></section>
-    <section></section>
-    <h1>css</h1>
-    <h1>react</h1>
+    <section><h2>html</h2></section>
+    
+    <section> <h1>css</h1></section>
+    <section><h1>react</h1></section>
+   
+    
 </body>
 </html>
